--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,5 @@
 @import url("./template.css");
 
-.grid {
-  display: grid;
-  gap: 1.5rem;
-}
-
 /* ======== Header ========== */
 .profile {
   position: relative;
