--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -77,3 +77,12 @@ video {
   max-width: 100%;
   height: auto;
 }
+
+.hidden{
+  display: none;
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
